--- a/captureImages/index.html
+++ b/captureImages/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div class="camera">
-    <video id="video" width="300" height="300">Video stream not available.</video>
+    <video id="video">Video stream not available.</video>
     <button id="startbutton">Start burst</button>
     <button id="stopbutton" class="hidebutton">Stop burst</button>
   </div>
